<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.PaymentEditActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_below="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_montant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:padding="10dp"
            android:maxLines="1"
            android:hint="@string/hint_montant" />

        <Spinner
            android:id="@+id/spinner_paiementModeId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/hint_modepaiement"/>

        <EditText
            android:id="@+id/input_libelle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_libelle" />

        <EditText
            android:id="@+id/input_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lieu" />

        <EditText
            android:id="@+id/input_reference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_reference" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:indeterminateTint="@color/colorAccent"
        android:visibility="gone"
        android:indeterminateTintMode="src_atop" />

</RelativeLayout>